# convene

./: .env  .gitignore  package.json  pyproject.toml  pyrun
apps/main/: admin.py  queries.py  urls.py
apps/main/forms/: login.py
apps/main/managers/: user.py
apps/main/migrations/: 0001_initial.py
apps/main/models/: __init__.py  room.py  space.py  streams.py  user.py
apps/main/sr/: users.py
apps/main/views/: login.py
core/: env.py  settings.py  urls.py
core/settings/: __init__.py  auth.py  db.py
src/: main.ts
src/api/: index.ts
src/pages/: login.vue
src/router/: index.ts
